--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "aws-sdk": "^2.1692.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
+    "p-limit": "^7.2.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "sonner": "^2.0.7",
